<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionmove"
        android:icon="?attr/action_cut"
        android:showAsAction="ifRoom"
        android:title="@string/move" />
    <item
        android:id="@+id/actioncopy"
        android:icon="?attr/action_copy"
        android:showAsAction="ifRoom"
        android:title="@string/copy" />
    <item
        android:id="@+id/actionrename"
        android:icon="?attr/action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/rename" />
    <item
        android:id="@+id/actiondelete"
        android:icon="?attr/action_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete" />
    <item
        android:id="@+id/actionshare"
        android:icon="?attr/action_share"
        android:showAsAction="ifRoom"
        android:title="@string/share" />
    <item
        android:id="@+id/actionzip"
        android:icon="?attr/action_zip"
        android:showAsAction="ifRoom"
        android:title="@string/multizip" />
    <item
        android:id="@+id/actiongroupowner"
        android:showAsAction="never"
        android:title="@string/changegroupowner" />
    <item
        android:id="@+id/actiondetails"
        android:icon="?attr/action_info"
        android:showAsAction="ifRoom"
        android:title="@string/details" />
    <item
        android:id="@+id/actionbookmark"
        android:icon="?attr/action_bookmark"
        android:showAsAction="ifRoom"
        android:title="@string/createbookmark" />
    <item
        android:id="@+id/actionshortcut"
        android:showAsAction="never"
        android:title="@string/shortcut" />
    <item
        android:id="@+id/actionall"
        android:showAsAction="never"
        android:title="@string/selectall" />

</menu>