<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/uisettings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="displayhiddenfiles"
            android:title="@string/hiddenfiles" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showpreview"
            android:title="@string/showpreview" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/viewentries"
            android:entryValues="@array/viewvalues"
            android:key="viewmode"
            android:title="@string/viewmode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sortpreferences">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/sortentries"
            android:entryValues="@array/sortvalues"
            android:key="sort"
            android:title="@string/sort" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="reverseList"
            android:title="@string/sort_reverselist" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advancedsettings">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/themes"
            android:entryValues="@array/appearance_types_values"
            android:key="preference_theme"
            android:title="@string/theme" />

        <EditTextPreference
            android:dialogTitle="@string/defaultdir"
            android:key="defaultdir"
            android:title="@string/defaultdir" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enablerootaccess"
            android:title="@string/enable_root" />
    </PreferenceCategory>

    <PreferenceScreen android:title="@string/xdaforum">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://forum.xda-developers.com/showthread.php?t=2330864" />
    </PreferenceScreen>

</PreferenceScreen>